manifests/todo-app/cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 2350
      protocol: TCP
      targetPort: 3000
