manifests/todo-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /todo
        pathType: Prefix
        backend:
          service:
            name: todo-app-svc
            port:
              number: 2350
